    * 0155 FIX: mssql_counters: harded check agains odd agent output
    * 0910 FIX: brocade.power: fixed an error where the check reports an UNKNOWN on power supply failure...

    Multisite:
    * 0912 FIX: Multisite Views: Fixed bug where custom views could not get deleted

    WATO:
    * 0971 FIX: Fix missing authentication of PHP addons in D-WATO when activation mode is reload...

    Notifications:
    * 0964 FIX: Fix hanging shutdown of CMC on RedHat 5.X...

    BI:
    * 0882 FIX: check_bi_local.py: fix crash in case of non-ascii characters...

    Event Console:
    * 0902 FIX: event console view: fixed exception on rendering host tags for unknown hosts...


1.2.4p2:
    Core & Setup:
    * 0785 FIX: Availability: fixed memory leak in table statehist...

    Checks & Agents:
    * 0746 zfsget: fixed problem with agent output of check_mk_agent.solaris...

    WATO:
    * 0784 Improved security of WATO bulk inventory by using transaction ids
    * 0781 FIX: host diag page: fixed problem with update of diagnose subwindows...


1.2.4p1:
    Core & Setup:
    * 0282 FIX: TIMEPERIOD TRANSITION messages no longer cut at 64 bytes...
    * 0730 FIX: cmc: fixed bug displaying logentries after a logfile rotation...

    Checks & Agents:
    * 0279 FIX: check_mk_agent.solaris: removed proc section from statgrab...
    * 0281 FIX: statgrab_net.ctr: only inventorize interfaces with actual traffic...
    * 0667 FIX: oracle_asm_diskgroup: Now really uses the generic filesystem levels...
    * 0555 FIX: snmp_uptime: no longer fails if uptime is < 1 seconds
    * 0136 FIX: cisco_fru_power: Prevent inventory of not exsisting devices
    * 0673 FIX: zfsget: Fixed broken check - was not compatible to current agent output of "df"
    * 0719 FIX: postfix_mailq: fix Linux agent in case of ssmtp being installed
    * 0137 FIX: Fixed printer_pages...
    * 0563 FIX: windows agent: now able to process perl scripts...