@@ -8019,6 +8019,11 @@ def mode_edit_site(phase):
         if not new and "secret" in old_site:
             new_site["secret"] = old_site["secret"]
 
+        # Do not forget to add those settings (e.g. "globals") that
+        # are not edited with this dialog
+        for key in old_site.keys():
+            if key not in new_site:
+                new_site[key] = old_site[key]
 
         save_sites(sites)
 
