@@ -14,6 +14,7 @@
 
     WATO:
     * 0971 FIX: Fix missing authentication of PHP addons in D-WATO when activation mode is reload...
+    * 0972 FIX: Do not loose site specific global settings anymore when chaning a site's configuration...
 
     Notifications:
     * 0964 FIX: Fix hanging shutdown of CMC on RedHat 5.X...
